Aligned About top content

--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,12 @@ p {
     padding-bottom: 20px;  
 }
 
+.top-content .about {
+    width: 100%;
+    padding: 0 1%;
+    padding-bottom: 20px;  
+}
+
 .middle-content {
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
