--- a/css/index.css
+++ b/css/index.css
@@ -133,6 +133,13 @@ p {
     margin-bottom: 0;
 }
 
+.middle-content .about {
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid red;
+    width: 200px;
+}
+
 .middle-content .boxes {
     display: flex;
     flex-wrap: wrap;
@@ -261,6 +268,14 @@ p {
 
 .bottom-content .text-container:last-child {
     padding-right: 0;
+}
+
+button {
+    border-radius: 5px;
+    margin-top: 20px;
+    font-size: 15px;
+	border: 1px solid;
+    padding: 5px 45px;
 }
 
 footer {
