Added form to Contact page and form CSS to CSS

--- a/css/index.css
+++ b/css/index.css
@@ -309,3 +309,58 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+#survey-form {
+    margin: 10px auto;
+    width: 450px;
+    padding: 20px;
+  }
+  
+  input[type=text] {
+    width: 50%;
+    padding: 5px;
+    margin: 8px 0;
+    border: none;
+    border: 2px solid black;
+    border-radius: 4px;
+    font-size: 13px;  
+  }
+  
+  input[type=text]:focus {
+    outline: none;  
+  }
+  
+  input[type=email] {
+    width: 50%;
+    padding: 5px;
+    margin: 8px 0;
+    border: none;
+    border: 2px solid black;
+    border-radius: 4px;
+    font-size: 13px;  
+  }
+  
+  input[type=email]:focus {
+    outline: none;  
+  }
+  
+  textarea {
+    width: 90%;
+    padding: 10px;
+    margin: 20px 0;
+    border: none;
+    border: 2px solid black;
+    border-radius: 4px;
+    outline: none;  
+    font-size: 13px;
+  }
+  
+
+  input[type=button], input[type=submit], input[type=reset] {
+  border: 2px solid black;
+  border-radius: 4px;
+  padding: 10px 100px;
+  margin: 4px 2px;
+  cursor: pointer;
+  font-size: 15px;  
+}
